# pytristan

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/workflows/: pytristan.yml
src/pytristan/: __init__.py  _base_dmat.py  _dmat.py  _interp.py  _manager.py  _version.py  cheb_dmat.py  cheb_mat_mod.py  def_mod.py  diffop.py  fin_diff_mat_mod.py  four_dmat.py  grid.py  matutils.py
src/pytristan/tests/: test_dmat.py  test_grid.py  test_matutils.py
src/pytristan/tests/diffop/mem/: infile.yaml  test_mem.py
src/pytristan/tests/grid/: test_grid.py
