[metadata]
name = pytristan
description = Meshes and differential operators in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Yelyzaveta Velizhanina and Bernard Knaepen
author_email = velizhaninae@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Source Code = https://github.com/YelyzavetaV/pytristan
    Bug Tracker = https://github.com/YelyzavetaV/pytristan/issues

[options]
packages = find:
package_dir =
    =src
install_requires = numpy
python_requires = >=3.8

[coverage:run]
branch = True
source = src
omit =
    src/pytristan/_version.py

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pytristan/_version.py
versionfile_build = pytristan/_version.py
tag_prefix =
parentdir_prefix = pytristan-
